[package]
name = "rust_embassy_pico_project"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rust_embassy_pico_project"
test = false
bench = false

[dependencies]
embassy-executor = { version = "0.7", features = [
    "task-arena-size-1024",
    "arch-cortex-m",
    "executor-thread",
    "defmt",
    "executor-interrupt",
] }
embassy-sync = "0.7.0"
embassy-time = { version = "0.4", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.4", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
cortex-m-rt = "0.7.5"
cortex-m = "0.7.7"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0.0"
